@@ -14,8 +14,6 @@ import java.beans.PropertyChangeSupport;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
 import javax.swing.SwingUtilities;
 import org.slf4j.Logger;
@@ -36,8 +34,7 @@ import org.weasis.core.api.service.BundleTools;
 public abstract class AbstractFileModel implements TreeModel, DataExplorerModel {
   private static final Logger LOGGER = LoggerFactory.getLogger(AbstractFileModel.class);
 
-  public static final List<String> functions =
-      Collections.unmodifiableList(Arrays.asList("get", "close")); // NON-NLS
+  public static final List<String> functions = List.of("get", "close"); // NON-NLS
 
   public static final String NAME = "All Files"; // NON-NLS
   public static final TreeModelNode group =
@@ -45,13 +42,13 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
   public static final TreeModelNode series =
       new TreeModelNode(2, 0, TagW.SubseriesInstanceUID, new TagView(TagW.FileName));
 
-  private static final List<TreeModelNode> modelStrucure =
+  private static final List<TreeModelNode> modelStructure =
       Arrays.asList(TreeModelNode.ROOT, group, series);
 
   private final Tree<MediaSeriesGroup> model;
   private PropertyChangeSupport propertyChange = null;
 
-  public AbstractFileModel() {
+  protected AbstractFileModel() {
     model = new Tree<>(MediaSeriesGroupNode.rootNode);
   }
 
@@ -93,14 +90,14 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
   @Override
   public MediaSeriesGroup getParent(MediaSeriesGroup node, TreeModelNode modelNode) {
     if (null != node && modelNode != null) {
-      if (node.getTagID().equals(modelNode.getTagElement())) {
+      if (node.getTagID().equals(modelNode.tagElement())) {
         return node;
       }
       Tree<MediaSeriesGroup> tree = model.getTree(node);
       if (tree != null) {
         Tree<MediaSeriesGroup> parent;
         while ((parent = tree.getParent()) != null) {
-          if (parent.getHead().getTagID().equals(modelNode.getTagElement())) {
+          if (parent.getHead().getTagID().equals(modelNode.tagElement())) {
             return parent.getHead();
           }
           tree = parent;
@@ -111,10 +108,8 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
   }
 
   public void dispose() {
-    for (Iterator<MediaSeriesGroup> iterator =
-            this.getChildren(MediaSeriesGroupNode.rootNode).iterator();
-        iterator.hasNext(); ) {
-      iterator.next().dispose();
+    for (MediaSeriesGroup mediaSeriesGroup : this.getChildren(MediaSeriesGroupNode.rootNode)) {
+      mediaSeriesGroup.dispose();
     }
     model.clear();
   }
@@ -126,7 +121,7 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
 
   @Override
   public List<TreeModelNode> getModelStructure() {
-    return modelStrucure;
+    return modelStructure;
   }
 
   @Override
@@ -164,8 +159,8 @@ public abstract class AbstractFileModel implements TreeModel, DataExplorerModel 
           new ObservableEvent(
               ObservableEvent.BasicAction.REMOVE, AbstractFileModel.this, null, topGroup));
       Collection<MediaSeriesGroup> seriesList = getChildren(topGroup);
-      for (Iterator<MediaSeriesGroup> it = seriesList.iterator(); it.hasNext(); ) {
-        it.next().dispose();
+      for (MediaSeriesGroup mediaSeriesGroup : seriesList) {
+        mediaSeriesGroup.dispose();
       }
       removeHierarchyNode(MediaSeriesGroupNode.rootNode, topGroup);
       LOGGER.info("Remove Group: {}", topGroup);
